  bug whereby nested select statements were not getting correlated with the 
  main select generated by the Query object.
  - default "timezone" setting is now False.  this corresponds to Python's datetime
  behavior as well as Postgres' timestamp/time types (which is the only timezone-sensitive
  dialect at the moment) [ticket:414]
- firebird:
  - order of constraint creation puts primary key first before all other constraints;
  required for firebird, not a bad idea for others [ticket:408]
  - Firebird fix to autoload multifield foreign keys [ticket:409]
  - Firebird NUMERIC type properly handles a type without precision [ticket:409]
- orm:
  - added a mutex to the mapper compilation step.  ive been reluctant to add any kind
  of threading anything to SA but this is one spot that its its really needed since mappers
  are typically "global", and while their state does not change during normal operation, the 
  initial compilation step does modify internal state significantly, and this step usually
  occurs not at module-level initialization time (unless you call compile()) but at first-request 
  time
  - added "compile_mappers()" function as a shortcut to compiling all mappers
  - fix to MapperExtension create_instance so that entity_name properly associated
with new instance
  - speed enhancements to ORM object instantiation, eager loading of rows
  - invalid options sent to 'cascade' string will raise an exception [ticket:406]
  - fixed bug in mapper refresh/expire whereby eager loaders didnt properly re-populate
  item lists [ticket:407]
  - fix to post_update to insure rows are updated even for non insert/delete scenarios
  [ticket:413]
  - added an error message if you actually try to modify primary key values on an entity
  and then flush it.  

0.3.3
- string-based FROM clauses fixed, i.e. select(..., from_obj=["sometext"])
- fixes to passive_deletes flag, lazy=None (noload) flag
- added example/docs for dealing with large collections