@@ -15,6 +15,9 @@
   - default "timezone" setting is now False.  this corresponds to Python's datetime
   behavior as well as Postgres' timestamp/time types (which is the only timezone-sensitive
   dialect at the moment) [ticket:414]
+  - the "op()" function is now treated as an "operation", rather than a "comparison".
+  the difference is, an operation produces a BinaryExpression from which further operations
+  can occur whereas comparison produces the more restrictive BooleanExpression
 - firebird:
   - order of constraint creation puts primary key first before all other constraints;
   required for firebird, not a bad idea for others [ticket:408]
